# orca-lang

./: .gitignore  AUTHORS  BUILD.md  ChangeLog  Dockerfile  Makefile.am  Makefile.in  Makefile.linux  README  README.ko  README.md  TODO  autogen.sh  config.h.in  configure  configure.ac  html.orca  libtool  make.sh  raft.orca  tt.orca  vscompile.bat
docs/: 10min.md  10min_kr.md  about_sonar.md  about_sonar_kr.md  docker.md  main.css  module.html  module.md  module_kr.html  module_kr.md  rad.md  rad_kr.md  tutorial.html  tutorial.md  tutorial_kr.html  tutorial_kr.md
extlib/cgi/: Makefile  orcaCgi.cpp  orcaCgi.h
extlib/gtk/: gtk.sln
extlib/mysql/: Makefile  orcaMysql.cpp  orcaMysql.h
extlib/sample/: Makefile  sample.cpp  sample.h
lib/: Makefile  Makefile.am  Makefile.in  alg.kw  alg.orca  cached.kw  cached.orca  dfsd.kw  dfsd.orca  dist.kw  dist.orca  fs.kw  fs.orca  fun.kw  fun.orca  get.kw  get.orca  gnuplot.kw  gnuplot.orca  gui.kw  gui.orca  html.kw  html.orca  httpd.kw  httpd.orca  httplib.kw  httplib.orca  json.kw  json.orca  lisp.kw  lisp.orca  log.kw  log.orca  match.kw  match.orca  md.kw  md.orca  orm.kw  orm.orca  osp.kw  (+16 more)
lib/distribute.orca/: dfsd.kw  dfsd.orca  dist.kw  dist.orca  fs.kw  fs.orca  remotec.kw  remotec.orca  remoted.kw  remoted.orca
lib/encoding.orca/: CODE.kw  CODE.orca  json.kw  json.orca  resp.kw  resp.orca  xml.kw  xml.orca
lib/html.orca/: CODE.kw  CODE.orca  dom.kw  dom.orca  form.kw  form.orca  jqueryui.kw  jqueryui.orca  rad.kw  rad.orca  request.kw  request.orca  tag.kw  tag.orca
lib/html.orca/form.orca/: CODE.kw  CODE.orca  input.kw  input.orca
lib/io.orca/: CODE.kw  CODE.orca  buffer.kw  buffer.orca
lib/lang.orca/: lisp.kw  lisp.orca  sh.kw  sh.orca
lib/net.orca/: CODE.kw  CODE.orca  client.orca  httpd.kw  httpd.orca  httplib.kw  httplib.orca  krillc.kw  krillc.orca  osp.kw  osp.orca  url.kw  url.orca
lib/net.orca/http.orca/: client.kw  server.kw  server.orca
lib/net.orca/krillc.orca/: client.kw  client.orca  pool.kw  pool.orca
lib/orm.orca/: CODE.kw  CODE.orca  model.kw  model.orca  query.kw  query.orca  type.kw  type.orca
lib/sonar.orca/: CODE.kw  CODE.orca
lib/sonar.orca/contrib.orca/: admin.kw  admin.orca
lib/sonar.orca/core.orca/: CODE.kw  CODE.orca  client.kw  client.orca  httpd.kw  httpd.orca  manager.kw  manager.orca  reloader.kw  reloader.orca  session.kw  session.orca
lib/sonar.orca/http.orca/: request.kw  request.orca
lib/sonar.orca/orm.orca/: initialize.kw  initialize.orca  migrate.kw  migrate.orca
lib/sonar.orca/template.orca/: CODE.kw  CODE.orca
lib/storage.orca/: CODE.kw  CODE.orca  cached.kw  cached.orca  orm.kw  orm.orca
lib/strings.orca/: CODE.kw  CODE.orca  template.kw  template.orca
lib/tool.orca/: gnuplot.kw  gnuplot.orca
lib/util.orca/: CODE.kw  CODE.orca  match.kw  match.orca
misc/docker-build-base/: Dockerfile
src/: Makefile.am  Makefile.in  orca
src/corelib/: orcaBase64.h  orcaCPP.h  orcaCgi.h  orcaCompress.cpp  orcaCompress.h  orcaCrypto.cpp  orcaCrypto.h  orcaDL.h  orcaDate.h  orcaDatetime.cpp  orcaDatetime.h  orcaFile.cpp  orcaFile.h  orcaFun.h  orcaGtk.cpp  orcaGtk.h  orcaIO.cpp  orcaIO.h  orcaIPC.cpp  orcaIPC.h  orcaLeveldb.cpp  orcaLeveldb.h  orcaMath.h  orcaOS.cpp  orcaOS.h  orcaOperator.h  orcaOrca.h  orcaPack.cpp  orcaPack.h  orcaQueue.cpp  orcaQueue.h  orcaRandom.h  orcaSelect.cpp  orcaSelect.h  orcaSelector.cpp  orcaSelector.h  orcaSocket.cpp  orcaSocket.h  orcaSort.h  orcaSorted.h  (+15 more)
src/include/: FlexLexer.h  orca_common.h  orca_opcode.h  porting.cpp  porting.h
src/kylib/: kyString.cpp  kyString.h
src/parser/: .parser.y.swp  lexer.cpp  lexer.l  parser.cpp  parser.hpp  parser.output  parser.y  parserCode.cpp  parserCode.h  parserConst.cpp  parserControl.cpp  parserControl.h  parserException.cpp  parserException.h  parserOP.cpp  parserOP.h  parserParse.cpp  parserParse.h  parserParser.cpp  parserParser.h  parser_common.cpp  parser_common.h
src/primitive/: orcaBoolean.cpp  orcaBoolean.h  orcaFloat.cpp  orcaFloat.h  orcaInteger.cpp  orcaInteger.h  orcaList.cpp  orcaList.h  orcaListIter.cpp  orcaListIter.h  orcaListIterator.cpp  orcaListIterator.h  orcaListVIterator.cpp  orcaListVIterator.h  orcaMap.cpp  orcaMap.h  orcaMapIter.cpp  orcaMapIter.h  orcaMapVIter.cpp  orcaMapVIter.h  orcaMapVIter2.cpp  orcaMapVIter2.h  orcaNil.cpp  orcaNil.h  orcaSbf.cpp  orcaSbf.h  orcaString.cpp  orcaString.h  orcaTuple.cpp  orcaTuple.h  orcaTupleIter.cpp  orcaTupleIter.h  orcaTupleVIter.cpp  orcaTupleVIter.h  orcaVirtList.cpp  orcaVirtList.h
src/vm/: main.cpp  orcaData.cpp  orcaData.h  orcaDecodeStack.cpp  orcaDecodeStack.h  orcaException.cpp  orcaException.h  orcaExceptionObject.cpp  orcaExceptionObject.h  orcaForStack.cpp  orcaForStack.h  orcaGlobal.cpp  orcaGlobal.h  orcaLocal.cpp  orcaLocal.h  orcaObject.cpp  orcaObject.h  orcaObjectMembers.cpp  orcaObjectMembers.h  orcaObjectMembersIter.cpp  orcaObjectMembersIter.h  orcaObjectMembersIter2.cpp  orcaObjectMembersIter2.h  orcaObjectParents.cpp  orcaObjectParents.h  orcaObjectParentsIter.cpp  orcaObjectParentsIter.h  orcaOnce.cpp  orcaOnce.h  orcaParserObject.cpp  orcaParserObject.h  orcaPure.cpp  orcaPure.h  orcaRoot.cpp  orcaRoot.h  orcaSelectStack.cpp  orcaSelectStack.h  orcaStack.cpp  orcaStack.h  orcaSwitchStack.h  (+4 more)
tests/: categories.xml  fibonacci.orca  gui_button.orca  gui_check.orca  gui_combo.orca  gui_entry.orca  gui_image.orca  gui_list.orca  gui_menu.orca  gui_radio.orca  gui_status.orca  gui_tree.orca  hello.orca  hello.osp  html.orca  html_tag.orca  lru-file.json  test.orca  test_alg.orca  test_arith.orca  test_channel.orca  test_context.orca  test_control.orca  test_date.orca  test_datetime.orca  test_decode.orca  test_dfsd.orca  test_dist.orca  test_exception.orca  test_fdselect.orca  test_file.orca  test_format.orca  test_fun.orca  test_gc.orca  test_gnuplot.orca  test_gui.orca  test_ipc.orca  test_iter.orca  test_json.orca  test_lambda.orca  (+38 more)
tmp/: dload.orca  login.orca  result.orca  test_cgi.orca
tmp/lr/: c1.orca  c2.orca  c3.orca  c4.orca  calc.orca  calc1.orca  calc2.orca  calc3.orca  (+12 more)
win/: win.sln
(+15 files in other folders)
