
orcalibdir = $(prefix)/lib/orca
orcalib_DATA = alg.kw alg.orca cached.kw cached.orca dfsd.kw dfsd.orca dist.kw dist.orca fs.kw fs.orca fun.kw fun.orca gnuplot.kw gnuplot.orca gui.kw gui.orca httpd.kw httpd.orca httplib.kw httplib.orca json.kw json.orca lisp.kw lisp.orca match.kw match.orca osp.kw osp.orca remotec.kw remotec.orca remoted.kw remoted.orca run.kw run.orca sh.kw sh.orca util.kw util.orca xml.kw xml.orca log.kw log.orca 

orcalibsonardir = $(prefix)/lib/orca/sonar.orca
orcalibsonar_DATA = sonar.orca/CODE.kw sonar.orca/CODE.orca

orcalibsonarcontribdir = $(prefix)/lib/orca/sonar.orca/contrib.orca
orcalibsonarcontrib_DATA = sonar.orca/contrib.orca/admin.kw sonar.orca/contrib.orca/admin.orca

orcalibsonarcoredir = $(prefix)/lib/orca/sonar.orca/core.orca
orcalibsonarcore_DATA = sonar.orca/core.orca/CODE.kw sonar.orca/core.orca/CODE.orca sonar.orca/core.orca/client.kw sonar.orca/core.orca/client.orca sonar.orca/core.orca/httpd.kw sonar.orca/core.orca/httpd.orca sonar.orca/core.orca/manager.kw sonar.orca/core.orca/manager.orca sonar.orca/core.orca/session.kw sonar.orca/core.orca/session.orca

orcalibsonartemplatedir = $(prefix)/lib/orca/sonar.orca/template.orca
orcalibsonartemplate_DATA = sonar.orca/template.orca/CODE.kw sonar.orca/template.orca/CODE.orca

orcalibsonarhttpdir = $(prefix)/lib/orca/sonar.orca/http.orca
orcalibsonarhttp_DATA = sonar.orca/http.orca/request.kw sonar.orca/http.orca/request.orca
